# OpenPostTrainingOptimization

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  LICENSE  Makefile  PUBLICATION_CONFIRMATION.md  README.md  mypy.ini  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: ci.yml  coverage.yml  linux-cuda.yml  mac.yml  release.yml
docker/: Dockerfile  Dockerfile.cuda  docker-compose.yml  healthcheck.sh
docs/architecture/: ARCHITECTURE.md
scripts/: smoke_mac.sh
src/openposttraining/: cli.py
src/openposttraining/agents/: __init__.py  config.py  runner.py  tools.py
src/openposttraining/core/: __init__.py  quantization.py  sparsity.py  speculative.py
src/openposttraining/deployment/: inference_engine.py
src/openposttraining/deployment/servers/: __init__.py  llamacpp_server.py  mlx_server.py
src/openposttraining/integrations/: __init__.py  datasette_integration.py  llm_integration.py  ollama_integration.py
src/openposttraining/kernels/: __init__.py  triton_cuda.py
src/openposttraining/models/: llm_optimizer.py
src/openposttraining/profiling/: performance_analyzer.py
src/openposttraining/tui/: __init__.py  main.py
src/openposttraining/utils/: hardware_utils.py
tests/: conftest.py  test_agents.py  test_agents_tools.py  test_cli_comprehensive.py  test_cuda_marker.py  test_datasette_integration.py  test_hardware_utils.py  test_inference_engine.py  test_inference_stream.py  test_llm_integration.py  test_llm_optimizer.py  test_ollama_integration.py  test_profile_latency.py  test_quantization_cuda.py  test_quantization_mps.py  test_quantization_utils.py  test_sparsity_generic.py  test_status_export.py  test_tui.py
